@@ -1,3 +1,7 @@
+=== Unreleased
+
+* Fix number range queries when no prefixes are given.
+
 === 1.3.2 (4th December 2011)
 
 * Number range queries (Damian Janowski)
